--- a/index.html
+++ b/index.html
@@ -1,13 +1,23 @@
-# AmyPenney.github.io
-
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset = "utf-8">
-    <title> Amy's First Webpage </title>
-  </head>
-  <body>
-    <h1>Welcome to Amy's First Webpage</h1>
-    <p>This is Amy's first webpage. Cool, right?</p>
-  </body>
-</html>
+	<head>
+		<meta charset="utf-8">
+		<title> Amy's Webpages </title>
+		<style>
+			#header:
+				color: gray
+				font-family: cursive
+			#all:
+				background-color: pink
+				width: 75%
+				margin: auto
+		</style>
+
+
+	</head> <div id="all">
+	<h1 id="header"> Welcome to Amy's Webpages </h1>
+	<p> 
+		Welcome to my website! This is where I will put links to the websites I will create. Have fun browsing! 
+	</p>
+
+	</div> </html>
