--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
 		<meta charset="utf-8">
 		<title> Amy's Webpages </title>
 		<style>
-			#header:
+			#header{
 				color: gray
 				font-family: cursive
-			#all:
+			}
+			#all {
 				background-color: pink
 				width: 75%
 				margin: auto
+			}
 		</style>
 
 
