--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 		<title> Amy's Webpages </title>
 		<style>
 			#header{
-				color: gray
-				font-family: cursive
+				color: gray;
+				font-family: cursive;
 			}
 			#all {
-				background-color: pink
-				width: 75%
-				margin: auto
+				background-color: pink;
+				width: 75%;
+				margin: auto;
 			}
 		</style>
 
