--- a/index.html
+++ b/index.html
@@ -1,25 +1,32 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<title> Amy's Webpages </title>
-		<style>
-			#header{
-				color: gray;
-				font-family: cursive;
+<head>
+	<meta charset="utf-8">
+	<title> Amy's Webpages </title>
+	<style>
+		#header {
+			color: gray;
+			font-family: cursive;
+			margin: auto;
+		}
+		#all {
+			background-color: pink;
 			}
-			#all {
-				background-color: pink;
-				width: 75%;
-				margin: auto;
-			}
-		</style>
-
-
-	</head> <div id="all">
+		#container {
+			width: 75%;
+			margin: auto;
+		}
+		.main-text {
+			font-size: 3em;
+		}
+	</style>
+</head> 
+<body id="all"> <div id="container">
 	<h1 id="header"> Welcome to Amy's Webpages </h1>
-	<p> 
+	
+	<p class="main-text"> 
 		Welcome to my website! This is where I will put links to the websites I will create. Have fun browsing! 
 	</p>
 
-	</div> </html>
+</div> </body> 
+</html>
