--- a/index.html
+++ b/index.html
@@ -5,24 +5,23 @@
 	<title> Amy's Webpages </title>
 	<style>
 		#header {
-			color: gray;
-			font-family: cursive;
+			color: rgb(120, 120, 120);
 			margin: auto;
 		}
 		#all {
-			background-color: pink;
+			background-color: rgb(242, 233, 242);
 			}
 		#container {
 			width: 75%;
 			margin: auto;
 		}
 		.main-text {
-			font-size: 3em;
+			font-size: 1.5em;
 		}
 	</style>
 </head> 
 <body id="all"> <div id="container">
-	<h1 id="header"> Welcome to Amy's Webpages </h1>
+	<h1 id="header"> <strong>Welcome to Amy's Webpages </strong></h1>
 	
 	<p class="main-text"> 
 		Welcome to my website! This is where I will put links to the websites I will create. Have fun browsing! 
